update ban phat hanh

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -27,7 +27,6 @@
 
         <TextView
             android:id="@+id/tvTitle"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/menu_cart"
@@ -35,14 +34,15 @@
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvTitle"
-            android:src="@drawable/img_hola_product"
             android:layout_width="wrap_content"
-            android:layout_height="60dp" />
+            android:layout_height="60dp"
+            android:src="@drawable/img_hola_product"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -56,56 +56,65 @@
         app:layout_constraintVertical_bias=".7">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:paddingHorizontal="8dp"
-            android:paddingTop="16dp"
             android:id="@+id/rcvCart"
-            android:layout_alignParentTop="true"
-            android:layout_above="@id/layoutBottomView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_above="@id/layoutBottomView"
+            android:layout_alignParentTop="true"
+            android:paddingHorizontal="8dp"
+            android:paddingTop="16dp" />
 
         <TextView
             android:id="@+id/tvEmptyList"
-            android:textStyle="italic"
-            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_above="@id/ivEmptyList"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="12dp"
             android:text="@string/empty_list_cart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textStyle="italic"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/ivEmptyList"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_centerInParent="true"
             android:src="@drawable/empty_box"
-            android:layout_width="100dp"
-            android:layout_height="100dp" />
+            android:visibility="gone" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:progressTint="@color/purple_200" />
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:background="@color/green_200"
-            android:layout_alignParentBottom="true"
             android:id="@+id/layoutBottomView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@color/green_200">
 
             <TextView
-                android:textStyle="bold"
                 android:id="@+id/tvTongTienTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:text="@string/total_amount"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/btnThanhToan"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/btnThanhToan" />
 
             <TextView
-                android:textStyle="bold"
                 android:id="@+id/tvTongTien"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/default_price"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/tvTongTienTitle"
                 app:layout_constraintEnd_toStartOf="@id/btnThanhToan"
                 app:layout_constraintStart_toEndOf="@id/tvTongTienTitle" />
@@ -113,10 +122,10 @@
             <Button
                 android:id="@+id/btnThanhToan"
                 android:layout_width="wrap_content"
-                android:paddingHorizontal="24dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="24dp"
+                android:paddingHorizontal="24dp"
                 android:text="@string/pay"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
