--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.LoginActivity">
+    tools:context=".activity.auth.LoginActivity">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -15,13 +15,18 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/ivTitle"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_gravity="center_horizontal"
             android:layout_margin="16dp"
             android:src="@drawable/imedia" />
 
         <EditText
+            app:layout_constraintTop_toBottomOf="@id/ivTitle"
+            app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/edtEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,6 +37,7 @@
             android:inputType="textEmailAddress" />
 
         <EditText
+            app:layout_constraintTop_toBottomOf="@id/edtEmail"
             android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,18 +47,18 @@
             android:hint="@string/password"
             android:inputType="textPassword" />
 
-        <TextView
-            android:id="@+id/tvFaceIdentified"
+        <ImageView
+            android:src="@drawable/ic_hide_password"
+            app:layout_constraintTop_toTopOf="@id/edtPassword"
+            app:layout_constraintBottom_toBottomOf="@id/edtPassword"
+            app:layout_constraintEnd_toEndOf="@id/edtPassword"
+            android:layout_marginEnd="8dp"
+            android:id="@+id/ivShowPassword"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/face_identified"
-            android:textColor="@color/purple_200"
-            android:textSize="18sp" />
+            android:layout_height="wrap_content" />
 
         <Button
+            app:layout_constraintTop_toBottomOf="@id/edtPassword"
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -60,7 +66,7 @@
             android:layout_marginVertical="16dp"
             android:text="@string/login" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:layout_marginStart="64dp"
@@ -69,6 +75,7 @@
         android:id="@+id/tvDontHaveAccountYet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:layout_weight="1"
         android:gravity="center"
         android:text="@string/dont_have_account_yet"
